Adicionando nome do curso de Ansible

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Higor ama Analu</li>
         <li>Vagrant</li>
         <li>Docker</li>
-        <li>Ansible</li>
+        <li>Ansible: Curso dos bom</li>
         <li>Integração Contínua: Mais qualidade e menos risco no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
     </ul>
